wip: phase 1 cleanup
